[fix] overflow

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,12 @@
+html{
+    overflow-x : hidden;
+    overflow-y : auto;
+}
+
 body {
     margin: 0;
     overflow-x: hidden;
+    overflow-y : auto;
     -ms-overflow-style: none;
     scrollbar-width: none;
     background-color: black;
